<resources>
    <string name="app_name">TranceBaka</string>
    <!-- bottom menu -->
    <string name="menu_home">ホーム</string>
    <string name="menu_playlist">プレイリスト</string>
    <string name="menu_category">カテゴリ</string>
    <string name="menu_setting">設定</string>
    <string name="menu_about">このアプリについて</string>

    <!-- home -->
    <string name="home_home_quick_play">おまかせ再生</string>
    <string name="home_home_quick_play_description">おまかせ再生</string>
    <string name="home_home_section_recently_play_track">最近再生されたトラック</string>
</resources>
