<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_group_main"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_home"
            android:icon="@mipmap/ic_home_white_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/menu_playlist"
            android:icon="@mipmap/ic_queue_music_white_24dp"
            android:title="@string/menu_playlist" />
    </group>

    <group
        android:id="@+id/menu_group_other"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_setting"
            android:title="@string/menu_setting" />

        <item
            android:id="@+id/menu_about"
            android:title="@string/menu_about" />
    </group>
</menu>